# pinocchio-minimal

./: .git-blame-ignore-revs  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: test.yml
.github/workflows/conda/: environment.yml
src/: main.cpp
